# miniapi

./: Cargo.toml  Dockerfile  dockerscript
src/: main.rs
src/api/: mod.rs  routes.rs
