[package]
name = "miniapi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
mimalloc = { version = "*", default-features = false }
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[profile.release.build-override]
opt-level = 3
codegen-units = 1

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"